@@ -368,10 +368,10 @@ FT_BEGIN_HEADER
 
 
   /* typeof condition taken from gnulib's `intprops.h' header file */
-#if ( __GNUC__ >= 2                         || \
-      defined( __IBM__TYPEOF__ )            || \
-      ( __SUNPRO_C >= 0x5110 && !__STDC__ ) )
-#define FT_TYPEOF( type )  (__typeof__ (type))
+#if ( __GNUC__ >= 2                                      || \
+      ( __IBMC__ >= 1210 && defined( __IBM__TYPEOF__ ) ) || \
+      ( __SUNPRO_C >= 0x5110 && !__STDC__ )              )
+#define FT_TYPEOF( type )  ( __typeof__ ( type ) )
 #else
 #define FT_TYPEOF( type )  /* empty */
 #endif
